--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>网址转换</title>
     <!-- 引入 Bootstrap CSS 文件 -->
-    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://s4.zstatic.net/ajax/libs/twitter-bootstrap/5.3.1/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* 自定义样式 */
         .container {
@@ -34,9 +34,9 @@
     </div>
 
     <!-- 引入 Bootstrap JS 文件 -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.1/js/bootstrap.min.js"></script>
+    <script src="https://s4.zstatic.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://s4.zstatic.net/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://s4.zstatic.net/ajax/libs/twitter-bootstrap/5.3.1/js/bootstrap.min.js"></script>
     <script>
         function convertUrl() {
             var inputUrl = document.getElementById("inputUrl").value.trim(); // 移除前后空格
